<resources>
    <string name="app_name">ecommerce</string>
    <string name="logo">logo</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have an Account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_there">Hello There !</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="title_activity_main_sidebar">main_sidebar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="phone_number">Phone number</string>
    <string name="welcome">Welcome</string>
    <string name="get_appointment">Create</string>
</resources>
