<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/another_bac_here"
    tools:context=".U_LOGIN">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#39FFFFFF"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#28FFFFFF"
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="260dp"
                android:layout_height="140dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="-100dp"
                android:background="@drawable/edit_text_login"
                android:drawableStart="@drawable/u_email"
                android:drawableLeft="@drawable/u_email"
                android:ems="10"
                android:hint="@string/username_or_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColorHint="#85FFFFFF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/user_name"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="-94dp"
                android:background="@drawable/edit_text_login"
                android:ems="10"
                android:hint="@string/password"
                android:textSize="16sp"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/u_pass"
                android:padding="12dp"
                android:textColorHint="#8AFFFFFF"
                android:drawableStart="@drawable/u_pass" />

            <ProgressBar
                android:id="@+id/login_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:background="@drawable/login_btn"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/password"
                android:layout_centerHorizontal="true"
                android:enabled="false"
                android:backgroundTint="#FF9100"
                android:background="@drawable/login_btn"
                android:layout_marginBottom="-94dp"
                android:text="@string/log_in"
                />

            <TextView
                android:id="@+id/dont_have_an_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="29dp"

                android:gravity="center"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <View
                android:id="@+id/or_left_divider"
                android:layout_width="165dp"
                android:layout_height="2dp"
                android:layout_alignTop="@id/if_dont_account_or"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="11dp"
                android:background="#D2FF9100" />

            <TextView
                android:id="@+id/if_dont_account_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/dont_have_an_account"
                android:layout_marginTop="-37dp"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:layout_centerHorizontal="true"
                android:text="or" />

            <View
                android:id="@+id/or_right_divider"
                android:layout_width="165dp"
                android:layout_height="2dp"
                android:layout_alignTop="@id/if_dont_account_or"
                android:layout_alignRight="@id/if_dont_account_or"
                android:layout_alignParentRight="true"
                android:layout_marginTop="11dp"
                android:layout_marginRight="1dp"
                android:background="#D2FF9100" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>